--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
+    "cookie": "^0.5.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "leaflet": "^1.9.2",
     "next": "13.0.2",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.32.1",
+    "react-redux": "^8.0.1",
+    "react-tabs": "^5.1.0",
+    "react-toastify": "^9.0.1",
+    "redux": "^4.0.2",
+    "swr": "^2.0.0"
   }
 }
